[ACCESSIBILITE]Correction des problèmes de contrastes

--- a/css/tarteaucitron.css
+++ b/css/tarteaucitron.css
@@ -526,7 +526,7 @@ div#tarteaucitronServices {
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronAllow,
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronDeny,
 .tac_activate .tarteaucitronAllow {
-    background: gray;
+    background: #555;
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
@@ -923,21 +923,7 @@ div.amazon_product {
     height:240px;
     width:120px;
 }
-.tarteaucitronIsAllowed .tarteaucitronDeny {
-    opacity: 0.4!important;
-}.tarteaucitronIsDenied .tarteaucitronAllow {
-    opacity: 0.4!important;
-}.tarteaucitronIsAllowed .tarteaucitronAllow {
-    opacity: 1!important;
-}.tarteaucitronIsDenied .tarteaucitronDeny {
-    opacity: 1!important;
-}
-.tarteaucitronLine .tarteaucitronAllow, .tarteaucitronLine .tarteaucitronDeny {
-    opacity: 0.4;
-}
-#tarteaucitronServices_mandatory button.tarteaucitronAllow {
-    opacity: 1;
-}
+
 
 div#tarteaucitronInfo {
     display: block!important;
